wazuh/kube-wazuh-dockerhub/wazuh/reverse-proxy/wazuh-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wazuh-nginx-service
  namespace: wazuh
spec:
  selector:
    app: wazuh-nginx
  ports:
    - name: wazuh-nginx-http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: wazuh-nginx-https
      protocol: TCP
      port: 443
      targetPort: 443
